Contrast ratio issue fixed

--- a/source/_includes/cookies.sass
+++ b/source/_includes/cookies.sass
@@ -19,16 +19,19 @@
     +media($tablet-small)
       padding: $small-spacing $mid-spacing
 
+  h2
+    color: #1e5570
+
 #accept-all
-  color: $blue
-  border: 1px solid $blue
+  color: #1e5570
+  border: 1px solid #1e5570
   margin: 3px
   +media($phone-large)
     margin-left: $mid-spacing
 
 #accept-necessary
   color: $base-font-color
-  background: #97b5cb
+  background: #9fc5df
   margin: 3px
   +media($phone-large)
     margin-right: $mid-spacing
